--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js"
   },
-  "author": "",
+  "author": "FrankSiret",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.10.0",
